--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Институт</title>
 	<link rel="stylesheet" type="text/css" href="css/boot.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
